Fixes: #4383 color contrast of readonly input fields

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -2314,6 +2314,7 @@ textarea,
   &.is-disabled, // .is-disabled should not be used - legacy support
   &[disabled],
   &[readonly] {
+    background: var(--background-secondary);
     opacity: 0.38;
 
     &:focus,
